[gd_scene load_steps=11 format=3 uid="uid://cwt61bud5wro3"]

[ext_resource type="PackedScene" uid="uid://dgombqqtsdpa8" path="res://bulletins/player_menus/player_menu_base.tscn" id="1_02v2m"]
[ext_resource type="Texture2D" uid="uid://bfng6g7tsvrod" path="res://textures/panel_brown.png" id="2_dumx4"]
[ext_resource type="Script" path="res://bulletins/player_menus/cooking_menu/cooking_menu.gd" id="2_v5plv"]
[ext_resource type="Script" path="res://bulletins/player_menus/cooking_menu/starting_cooking_slot.gd" id="3_ayn73"]
[ext_resource type="Texture2D" uid="uid://dde7elgdk7phy" path="res://textures/square32.png" id="4_v68e6"]
[ext_resource type="Script" path="res://bulletins/player_menus/cooking_menu/final_cooking_slot.gd" id="5_rqeux"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4yc2f"]
bg_color = Color(0.32549, 0.32549, 0.32549, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rc1m5"]
bg_color = Color(0, 0, 0, 0.235294)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_71smd"]
bg_color = Color(0, 0, 0, 0.352941)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_chyao"]

[node name="CookingMenu" instance=ExtResource("1_02v2m")]
script = ExtResource("2_v5plv")

[node name="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/UtilityNinePatchRect/MarginContainer/VBoxContainer/NinePatchRect" index="0"]
text = "Cooking"

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/UtilityNinePatchRect/MarginContainer/VBoxContainer" index="1"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/UtilityNinePatchRect/MarginContainer/VBoxContainer/CenterContainer" index="0"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/UtilityNinePatchRect/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer" index="0"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="StartingCookingSlot" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer/UtilityNinePatchRect/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/HBoxContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_dumx4")
script = ExtResource("3_ayn73")

[node name="CookingProgressBar" type="TextureProgressBar" parent="MarginContainer/HBoxContainer/VBoxContainer/UtilityNinePatchRect/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/HBoxContainer" index="1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 48)
layout_mode = 2
size_flags_vertical = 4
nine_patch_stretch = true
texture_under = ExtResource("4_v68e6")
texture_progress = ExtResource("4_v68e6")
tint_under = Color(0.320883, 0.230174, 0.136247, 1)
tint_progress = Color(0.803922, 0.509804, 0, 1)

[node name="FinalCookingSlot" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer/UtilityNinePatchRect/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/HBoxContainer" index="2"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_dumx4")
script = ExtResource("5_rqeux")

[node name="CookButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/UtilityNinePatchRect/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer" index="1"]
custom_minimum_size = Vector2(196, 64)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme_override_font_sizes/font_size = 28
theme_override_styles/disabled = SubResource("StyleBoxFlat_4yc2f")
theme_override_styles/hover = SubResource("StyleBoxFlat_rc1m5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_71smd")
theme_override_styles/normal = SubResource("StyleBoxEmpty_chyao")
disabled = true
text = "Cook
"
